fix login form alignment issue

--- a/client/App/Auth/Auth.scss
+++ b/client/App/Auth/Auth.scss
@@ -1,10 +1,7 @@
-.mt-auth {
-    padding-top: 1.25rem;
-    padding-bottom: 1.25rem;
-}
-
 .mt-auth__title {
     text-align: center;
+    margin: 0px;
+    padding-bottom: 15px;
 }
 
 .mt-auth__actions {
