--- a/client/App/Auth/Login/Login.scss
+++ b/client/App/Auth/Login/Login.scss
@@ -1,4 +1,10 @@
 .mt-login {
     display: flex;
+    justify-content: center;
     align-items: center;
+    height: calc(100vh - 65px);
+}
+
+.mt-login__form-container {
+    padding-bottom: 50px;
 }
